# oneOf-ex

./: README.md  index.js  main.py  package.json  pyproject.toml
data/schemas/: dual-conditional.json  dual.json  single.json
data/to_validate/: test.json
