[tool.poetry]
name = "oneof-ex"
version = "0.1.0"
description = "Example to show a JSON Schema oneOf behaviour."
authors = ["Paul Fouquet <pfouquet@linz.govt.nz>"]

[tool.poetry.dependencies]
python = "^3.8"
jsonschema-rs = "^0.13.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
